change description of web application to private

--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						</div>
 						<div class="gtco-copy">
-							<h3><a href="work/index.php">WORKSPACE EXPLODER</a></h3>
+							<!-- <h3><a href="work/index.php">WORKSPACE EXPLODER</a></h3> -->
+							<h3><a href="#">WORKSPACE EXPLODER</a></h3>
 							<p>wifiやコンセントのあるカフェを探せます</p>
+							<p>※現在利用できません</p>
 						</div>
 					</div>
 
