delete URL to blog

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
 						<li class="active"><a href="index.html" data-nav-section="home">Home</a></li>
-						<li><a href="blog.html" data-nav-section="blog">Blog</a></li>
+						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="skills">Web Apps</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<!-- <li class="btn-cta"><a href="#" data-nav-section="contact"><span>Contact</span></a></li> -->
@@ -129,45 +129,45 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
-						<a href="blog.html" class="blog-img"><img src="images/IMG_8970.JPG" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+						<a href="#" class="blog-img"><img src="images/IMG_8970.JPG" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
-							<h3><a href="blog.html">初回投稿</a></h3>
+							<h3><a href="#">初回投稿</a></h3>
 							<span><small>甚平</small> / <small>Introduction</small> / <small> <i class="icon-comment"></i></small></span>
 							<p>はじめまして、Jimbeと言います。Jimbeというのはもちろんニックネームで寝間着が甚平だったのでそうつけてもらいました（笑）</p>
-							<a href="blog.html" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
+							<a href="#" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<!-- <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
-						<a href="blog.html" class="blog-img"><img src="images_blog/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+						<a href="#" class="blog-img"><img src="images_blog/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
-							<h3><a href="blog.html">Inspirational Website</a></h3>
+							<h3><a href="#">Inspirational Website</a></h3>
 							<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 							<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-							<a href="blog.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 						</div>
 					</div>
 				</div> -->
 				<!-- <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
-						<a href="blog.html" class="blog-img"><img src="images_blog/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+						<a href="#" class="blog-img"><img src="images_blog/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
-							<h3><a href="blog.html">Inspirational Website</a></h3>
+							<h3><a href="#">Inspirational Website</a></h3>
 							<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 							<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-							<a href="blog.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 						</div>
 					</div>
 				</div> -->
 				<!-- <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
-						<a href="blog.html" class="blog-img"><img src="images_blog/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+						<a href="#" class="blog-img"><img src="images_blog/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
-							<h3><a href="blog.html">Inspirational Website</a></h3>
+							<h3><a href="#">Inspirational Website</a></h3>
 							<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 							<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-							<a href="blog.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 						</div>
 					</div>
 				</div> -->
@@ -290,7 +290,7 @@
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<!-- <h2 class="heading-colored">Excellence &amp; Honest</h2> -->
 					<h2 class="heading-colored">"Now or Never"</h2>
-					<p>三重大学工学部情報工学部3年。２年間弓道部に所属の後、兼ねてからのやりたいことであった留学をしようと内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアを目指す。事業後にミャンマーに対しての関心を持ち日本ミャンマー学生会議の実行委員となる。その中でシステムのインフラを整備する喜びを感じwebの世界に興味を持った。そしてそして現在に至る。</p>
+					<p>M大学工学部情報工学科。2年間弓道部に所属の後、兼ねてからのやりたいことであった留学をしようと内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアを目指す。事業後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、システムのインフラを整備する喜びを感じwebの世界に興味を持った。</p>
 					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 				</div>
 			</div>
