--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<div class="desc">
 							<h3><a href="#">初回投稿</a></h3>
 							<span><small>甚平</small> / <small>Introduction</small> / <small> <i class="icon-comment"></i></small></span>
-							<p>はじめまして、Jimbeと言います。Jimbeというのはもちろんニックネームで寝間着が甚平だったのでそうつけてもらいました（笑）</p>
+							<!--<p>はじめまして、Jimbeと言います。Jimbeというのはもちろんニックネームで寝間着が甚平だったのでそうつけてもらいました（笑）</p> -->
 							<a href="#" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
 						</div>
 					</div>
