--- a/template.html
+++ b/template.html
@@ -26,6 +26,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet"> -->
+  <link rel="shortcut icon" href="icon/favicon.ico" />
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../css/animate.css">
