added code to css

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="text-center col-md-8 col-md-offset-2 animate-box" data-animate-effect="fadeIn">
-					<h1>ようこそ<br>、Jimbeのホームページへ！</h1>
+					<h1>ようこそ<br>Jimbeのホームページへ！</h1>
 					<p class="sub">ここでは主にプログラミング関連の記事やwebアプリの公開などを行います。</p>
 				</div>
 			</div>
