--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<!-- <h2 class="heading-colored">Excellence &amp; Honest</h2> -->
 					<h2 class="heading-colored">"Now or Never"</h2>
-					<p>M大学工学部情報工学科。2年間弓道部に所属の後、兼ねてからのやりたいことであった留学をしようと内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアを目指す。事業後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、システムのインフラを整備する喜びを感じwebの世界に興味を持った。</p>
+					<p>地方国立大学工学部情報工学科4年。2年間弓道部に所属の後、兼ねてからのやりたいことであった留学をしようと内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアを目指す。事業後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、システムのインフラを整備する喜びを感じwebの世界に興味を持った。</p>
 					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 				</div>
 			</div>
