--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
 	<![endif]-->
 
 	</head>
+
 	<body>
-
 	<div class="gtco-loader"></div>
-
 	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
@@ -198,7 +197,7 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Web Application</h1>
 					<p class="sub">今持っているスキルや興味のある分野については以下のようになっています</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Apps</p>
+					<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Apps</p> -->
 				</div>
 			</div>
 			<div class="row">
@@ -279,7 +278,7 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>About</h1>
 					<p class="sub"></p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">About</p>
+					<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">About</p> -->
 				</div>
 			</div>
 			<div class="row">
