--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 col-xs-12">
 					<div class="gtco-skills-item animate-box">
 						<div class="gtco-icon">
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
