--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-xs-12">
+				<div class="col-md-6">
 					<div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
+						<div class="gtco-icon col-xs-6">
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						</div>
-						<div class="gtco-copy">
+						<div class="gtco-copy col-xs-6">
 							<!-- <h3><a href="work/index.php">WORKSPACE EXPLODER</a></h3> -->
 							<h3><a href="#">WORKSPACE EXPLODER</a></h3>
 							<p>wifiやコンセントのあるカフェを探せます</p>
