--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="gtco-skills-item animate-box">
+						<div class="col-md-12">
 						<div class="gtco-icon col-xs-6">
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						</div>
@@ -212,6 +213,7 @@
 							<p>wifiやコンセントのあるカフェを探せます</p>
 							<p>※現在利用できません</p>
 						</div>
+					</div>
 					</div>
 
 					<!-- <div class="gtco-skills-item animate-box">
