--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="gtco-skills-item animate-box">
-						<div class="col-md-12">
+						<div class="col-xs-12">
 						<div class="gtco-icon col-xs-6">
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						</div>
