--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 						<h1>Blog</h1>
 						<p class="sub">日々の事柄や技術的なメモなどブログ形式で更新していきます</p>
-						<p class="subtle-text animate-box" data-animate-effect="fadeIn">Blog</p>
+						<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Blog</p> -->
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
