--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
 				<div class="col-md-6">
 					<div class="gtco-skills-item animate-box">
 						<div class="col-xs-12">
-						<div class="gtco-icon col-xs-6">
+						<!-- <div class="gtco-icon col-xs-6">
 							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div>
+						</div> -->
 						<div class="gtco-copy col-xs-6">
 							<!-- <h3><a href="work/index.php">WORKSPACE EXPLODER</a></h3> -->
 							<h3><a href="#">WORKSPACE EXPLODER</a></h3>
