changed webapps to skills

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<ul>
 						<li class="active"><a href="index.html" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
-						<li><a href="#" data-nav-section="skills">Web Apps</a></li>
+						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<!-- <li class="btn-cta"><a href="#" data-nav-section="contact"><span>Contact</span></a></li> -->
 						<!-- For external page link -->
@@ -110,7 +110,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="text-center col-md-8 col-md-offset-2 animate-box" data-animate-effect="fadeIn">
-					<h1>ようこそ<br>Jimbeです！</h1>
+					<h1>ようこそ<br>Jimbeのページへ！</h1>
 					<p class="sub">ここでは主にプログラミング関連の記事やwebアプリの公開などを行います。</p>
 				</div>
 			</div>
@@ -191,86 +191,85 @@
 		</section>
 
 
-	<section id="gtco-skills" data-section="skills">
-		<div class="container">
-			<div class="row row-pb-md">
-				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Web Application</h1>
-					<p class="sub">今持っているスキルや興味のある分野については以下のようになっています</p>
-					<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Apps</p> -->
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="gtco-skills-item animate-box">
-						<!-- <div class="gtco-icon col-xs-6">
-							<a href="work/index.php"><img src="work/Images/テイクアウトのコーヒーのアイコン2.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-						</div> -->
-						<div class="gtco-copy">
-							<!-- <h3><a href="work/index.php">WORKSPACE EXPLODER</a></h3> -->
-							<h3><a href="#">WORKSPACE EXPLODER</a></h3>
-							<p>wifiやコンセントのあるカフェを探せます</p>
-							<p>※現在利用できません</p>
-						</div>
+		<section id="gtco-skills" data-section="skills">
+			<div class="container">
+				<div class="row row-pb-md">
+					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+						<h1>Skills</h1>
+						<p class="sub">今持っているスキルや興味のある分野については以下のようになっています。</p>
+						<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Practice <span>Areas</span></p> -->
 					</div>
-
-					<!-- <div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-						</div>
-						<div class="gtco-copy">
-							<h3>CSS</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-						</div>
-					</div> -->
-
-					<!-- <div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-						</div>
-						<div class="gtco-copy">
-							<h3>PHP</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-						</div>
-					</div> -->
-
 				</div>
-				<div class="col-md-6">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/front-end.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co" class="front">
+							</div>
+							<div class="gtco-copy">
+								<h3>HTML, CSS, bootstrap, javascript, PHP</h3>
+								<p>このサイトは以上のフロントエンドの言語を使って作られています。静的サイトの製作実績あり。PHPでは電源やwifiで条件を絞ってカフェを探せる<a href="work/index.php">WOKSPACE EXPLODER</a>を作りました(現在利用できません)</p>
+							</div>
+						</div>
 
-					<!-- <div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/React-native.png" alt="The logo for the React open source JavaScript library" class="react">
+							</div>
+							<div class="gtco-copy">
+								<h3>React Native</h3>
+								<p>Facebook が開発したクロスプラットフォームアプリ開発用フレームワーク。クロスプラットフォーム( iOS / Android どちらでも動く)アプリを作るために学習。簡易ニュースアプリを作った。（未公開）</p>
+							</div>
 						</div>
-						<div class="gtco-copy">
-							<h3>Javascript</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-						</div>
-					</div> -->
 
-					<!-- <div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/Python.png" alt="Python" class="python">
+							</div>
+							<div class="gtco-copy">
+								<h3>Python</h3>
+								<p>最近注目されている言語。コードの書きやすさ、読みやすさが売り。研究で使用予定。</p>
+							</div>
 						</div>
-						<div class="gtco-copy">
-							<h3>Google Apps Script</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-						</div>
-					</div> -->
 
-					<!-- <div class="gtco-skills-item animate-box">
-						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-						</div>
-						<div class="gtco-copy">
-							<h3>Node.js</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
-						</div>
-					</div> -->
+					</div>
+					<div class="col-md-6">
 
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/Swift.png" alt="Swift" class="swift">
+							</div>
+							<div class="gtco-copy">
+								<h3>Swift</h3>
+								<p>アップルのiOSおよびmacOS､Linuxで利用出来るプログラミング言語。appleユーザーとして作っておきたいと思い現在趣味で鋭意学習中。基礎は定着しているので1年で形にする。</p>
+							</div>
+						</div>
+
+
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/noimage.png" alt="c languages" class="c">
+							</div>
+							<div class="gtco-copy">
+								<h3>C</h3>
+								<p>コンパイル型の汎用プログラミング言語。大学3年まで演習や実験で使用。現在は全く使っていない。</p>
+							</div>
+						</div>
+<!--
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							</div>
+							<div class="gtco-copy">
+								<h3>Accident Law</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
+							</div>
+						</div> -->
+
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
 	<section id="gtco-about" data-section="about">
 		<div class="container">
