--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
-								<img src="images/Swift.png" alt="Swift" class="swift">
+								<img src="images/swift.png" alt="Swift" class="swift">
 							</div>
 							<div class="gtco-copy">
 								<h3>Swift</h3>
