--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 	</div>
 
 	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
 
 	<!-- jQuery -->
