--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Justice by freehtml5.co
-	Twitter: http://twitter.com/fh5co
-	URL: http://freehtml5.co
--->
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -111,7 +106,7 @@
 			<div class="row row-pb-md">
 				<div class="text-center col-md-8 col-md-offset-2 animate-box" data-animate-effect="fadeIn">
 					<h1>ようこそ<br>Jimbeのページへ！</h1>
-					<p class="sub">ここでは主にプログラミング関連の記事やwebアプリの公開などを行います。</p>
+					<p class="sub">ここでは主にプログラミングや技術関連の記事やコーディング技術、webアプリの公開などを行います。</p>
 				</div>
 			</div>
 		</div>
@@ -131,7 +126,7 @@
 					<div class="blog-entry">
 						<a href="#" class="blog-img"><img src="images/IMG_8970.JPG" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
-							<h3><a href="#">初回投稿</a></h3>
+							<h3><a href="#">はじめまして</a></h3>
 							<span><small>甚平</small> / <small>Introduction</small> / <small> <i class="icon-comment"></i></small></span>
 							<!--<p>はじめまして、Jimbeと言います。Jimbeというのはもちろんニックネームで寝間着が甚平だったのでそうつけてもらいました（笑）</p> -->
 							<a href="#" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
@@ -280,16 +275,17 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
+				<div class="col-md-6 col-md-pull-1 col-xs-12 animate-box" data-animate-effect="fadeInLeft">
 					<div class="img-shadow">
 						<img src="images/profile.JPG" class="img-responsive" alt="profile_photo">
 					</div>
 				</div>
-				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+				<div class="col-md-6 col-xs-12 animate-box" data-animate-effect="fadeInLeft">
 					<!-- <h2 class="heading-colored">Excellence &amp; Honest</h2> -->
-					<h2 class="heading-colored">"Now or Never"</h2>
-					<p>地方国立大学工学部情報工学科4年。2年間弓道部に所属の後、兼ねてからのやりたいことであった留学をしようと内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアを目指す。事業後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、システムのインフラを整備する喜びを感じwebの世界に興味を持った。</p>
-					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+					<p>ハンドルネーム</p>
+					<h2 class="heading-colored">甚平</h2>
+					<p>地方国立大学工学部情報工学科4年。2年間弓道部に所属の後、内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアになりたい。その後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、自分の知識を使って組織の業務効率化など創造から価値を生み出すことの楽しさを感じた。コミュニケーション×ITを実現するためこれからエンジニアとして活動していく。</p>
+					<!-- <p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p> -->
 				</div>
 			</div>
 		</div>
@@ -350,7 +346,7 @@
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="https://twitter.com/webcreateit0823"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-facebook"></i></a></li> -->
 							<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li> -->
 						</ul>
