--- a/blog2019/0128.html
+++ b/blog2019/0128.html
@@ -127,11 +127,11 @@
 			<div class="row">
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<div class="post-heading text-center">
-						<h1>初回投稿</h1>
+						<h1>はじめまして</h1>
 						<h2 class="subheading">Introduction</h2>
 						<span class="meta">
 							<a href="#">甚平　</a>
-							2019/01/28</span>
+							2019/05/03</span>
 					</div>
 				</div>
 			</div>
@@ -145,11 +145,11 @@
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<p>はじめまして、甚平と言います。</p>
 
-          <p>Jimbeというのはもちろんニックネームで、寝間着が甚平だったのでそうつけてもらいました（笑）</p>
+          <p>甚平とはもちろんペンネームです。</p>
 
-					<p>さてこの度自分のウェブサイトを開設した理由と自分の自己紹介を簡単にしたいと思います。</p>
+					<p>さて初回なので自分のポートフォリオを開設した経緯と今後のことをメモ程度にまとめました。</p>
 
-          <h2 class="section-heading">これまでの大学生活</h2>
+          <h3 class="section-heading">これまでの大学生活</h2>
           <p>私は大学生活で３つの叶えたいことがありました。</p>
 
           <p>その１つは武道です。</p>
@@ -157,15 +157,12 @@
           <p>それは日本人として武道を学んでみたかったのと精神鍛錬のためです。</p>
 
           <p>私は大学入学後すぐに弓道部に入部しました。</p>
-             <img class="img-fluid" src="../images/IMG_0055.JPG" alt="">
-             <span class="caption text-muted">1年の頃の初試合。三重大学道場にて。</span>
-          <p>２つ目は留学です。</p>
+
+				  <p>２つ目は留学です。</p>
 
           <p>小さい頃から海外への憧れが強く、国境を越えて活動できる人間になりたいなと思っていました。</p>
 
           <p>数々のイベントや国際プログラムに参加したりしました。</p>
-            <img class="img-fluid" src="../images/IMG_8761.JPG" alt="">
-            <span class="caption text-muted">「東南アジア青年の船」事業でのグループディスカッション。</span>
 
           <p>３つ目は理系学生として手に職をつけるということです。</p>
 
