renew my profile
switch the photos and retype descriptions.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="row row-pb-md">
 				<div class="text-center col-md-8 col-md-offset-2 animate-box" data-animate-effect="fadeIn">
 					<h1>ようこそ<br>Jimbeのページへ！</h1>
-					<p class="sub">ここでは主にプログラミングや技術関連の記事やコーディング技術、webアプリの公開などを行います。</p>
+					<p class="sub">気ままにプログラミングや技術関連の記事やTips、webアプリの公開などを行います。</p>
 				</div>
 			</div>
 		</div>
@@ -118,7 +118,7 @@
 				<div class="row row-pb-md">
 					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 						<h1>Blog</h1>
-						<p class="sub">日々の事柄や技術的なメモなどブログ形式で更新していきます</p>
+						<p class="sub">日々の事柄からメモまで更新していきます</p>
 						<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Blog</p> -->
 					</div>
 				</div>
@@ -128,7 +128,7 @@
 						<div class="desc">
 							<h3><a href="#">はじめまして</a></h3>
 							<span><small>甚平</small> / <small>Introduction</small> / <small> <i class="icon-comment"></i></small></span>
-							<!--<p>はじめまして、Jimbeと言います。Jimbeというのはもちろんニックネームで寝間着が甚平だったのでそうつけてもらいました（笑）</p> -->
+							<!--<p>20卒情報系学科卒の元男子中高校生。</p> -->
 							<a href="#" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
 						</div>
 					</div>
@@ -230,7 +230,7 @@
 					</div>
 					<div class="col-md-6">
 
-						<div class="gtco-practice-area-item animate-box">
+						<!-- <div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
 								<img src="images/swift.png" alt="Swift" class="swift">
 							</div>
@@ -238,7 +238,7 @@
 								<h3>Swift</h3>
 								<p>アップルのiOSおよびmacOS､Linuxで利用出来るプログラミング言語。appleユーザーとして作っておきたいと思い現在趣味で鋭意学習中。基礎は定着しているので1年で形にする。</p>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
@@ -284,7 +284,7 @@
 					<!-- <h2 class="heading-colored">Excellence &amp; Honest</h2> -->
 					<p>ハンドルネーム</p>
 					<h2 class="heading-colored">甚平</h2>
-					<p>地方国立大学工学部情報工学科4年。2年間弓道部に所属の後、内閣府の「東南アジア青年の船」事業に参加。グローバルな視点や経験を積み、社会課題を解決できるエンジニアになりたい。その後にミャンマーに対しての関心を持ち日本ミャンマー学生会議IDFCの実行委員を通して、自分の知識を使って組織の業務効率化など創造から価値を生み出すことの楽しさを感じた。コミュニケーション×ITを実現するためこれからエンジニアとして活動していく。</p>
+					<p>IT技術とミャンマー をこよなく愛する。取り柄はなんでも挑戦しよう精神とストレス耐性MAXなところ。苦手なことはSNS更新。業務興味を持ったことはとりあえずやってみるをモットーにしています。</p>
 					<!-- <p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p> -->
 				</div>
 			</div>
