edit sentences d front-end languages

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							</div>
 							<div class="gtco-copy">
 								<h3>HTML, CSS, bootstrap, javascript, PHP</h3>
-								<p>このサイトは以上のフロントエンドの言語を使って作られています。静的サイトの製作実績あり。PHPでは電源やwifiで条件を絞ってカフェを探せる<a href="work/index.php">WOKSPACE EXPLODER</a>を作りました(現在利用できません)</p>
+								<p>静的サイトの製作、案件実績あり。PHPでは電源やwifiで条件を絞ってカフェを探せる<a href="work/index.php">WOKSPACE EXPLODER</a>を作りました(現在利用できません)</p>
 							</div>
 						</div>
 
@@ -216,6 +216,18 @@
 								<p>Facebook が開発したクロスプラットフォームアプリ開発用フレームワーク。クロスプラットフォーム( iOS / Android どちらでも動く)アプリを作るために学習。簡易ニュースアプリを作った。（未公開）</p>
 							</div>
 						</div>
+						<!-- <div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/swift.png" alt="Swift" class="swift">
+							</div>
+							<div class="gtco-copy">
+								<h3>Swift</h3>
+								<p>アップルのiOSおよびmacOS､Linuxで利用出来るプログラミング言語。appleユーザーとして作っておきたいと思い現在趣味で鋭意学習中。基礎は定着しているので1年で形にする。</p>
+							</div>
+						</div> -->
+
+					</div>
+					<div class="col-md-6">
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
@@ -226,19 +238,6 @@
 								<p>コンパイル型の汎用プログラミング言語。大学3年まで演習や実験で使用。現在は全く使っていない。</p>
 							</div>
 						</div>
-
-					</div>
-					<div class="col-md-6">
-
-						<!-- <div class="gtco-practice-area-item animate-box">
-							<div class="gtco-icon">
-								<img src="images/swift.png" alt="Swift" class="swift">
-							</div>
-							<div class="gtco-copy">
-								<h3>Swift</h3>
-								<p>アップルのiOSおよびmacOS､Linuxで利用出来るプログラミング言語。appleユーザーとして作っておきたいと思い現在趣味で鋭意学習中。基礎は定着しているので1年で形にする。</p>
-							</div>
-						</div> -->
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
