--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-					<div class="blog-entry">
+					<!-- <div class="blog-entry">
 						<a href="#" class="blog-img"><img src="images/IMG_8970.JPG" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 						<div class="desc">
 							<h3><a href="#">はじめまして</a></h3>
 							<span><small>甚平</small> / <small>Introduction</small> / <small> <i class="icon-comment"></i></small></span>
-							<!--<p>20卒情報系学科卒の元男子中高校生。</p> -->
+							<p>20卒情報系学科卒の元男子中高校生。</p>
 							<a href="#" class="read-more">続きはこちら<i class="icon-chevron-right"></i></a>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<!-- <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
@@ -231,21 +231,21 @@
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
-								<img src="images/noimage.png" alt="c languages" class="c">
-							</div>
-							<div class="gtco-copy">
-								<h3>C</h3>
-								<p>コンパイル型の汎用プログラミング言語。大学3年まで演習や実験で使用。現在は全く使っていない。</p>
-							</div>
-						</div>
-
-						<div class="gtco-practice-area-item animate-box">
-							<div class="gtco-icon">
 								<img src="images/Python.png" alt="Python" class="python">
 							</div>
 							<div class="gtco-copy">
 								<h3>Python</h3>
 								<p>最近注目されている言語。コードの書きやすさ、読みやすさが売り。研究で使用予定。</p>
+							</div>
+						</div>
+
+						<div class="gtco-practice-area-item animate-box">
+							<div class="gtco-icon">
+								<img src="images/noimage.png" alt="c languages" class="c">
+							</div>
+							<div class="gtco-copy">
+								<h3>C</h3>
+								<p>コンパイル型の汎用プログラミング言語。大学3年まで演習や実験で使用。現在は全く使っていない。</p>
 							</div>
 						</div>
 <!--
