--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-						<h1>Blog</h1>
+						<h1>Note</h1>
 						<p class="sub">日々の事柄からメモまで更新していきます</p>
 						<!-- <p class="subtle-text animate-box" data-animate-effect="fadeIn">Blog</p> -->
 					</div>
